# SparkleEngine

./: .clang-tidy  .gitignore  CmakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/AI/: CMakeLists.txt
Engine/Animation/: CMakeLists.txt
Engine/Application/Private/: App.cpp  PCH.h
Engine/Application/Public/: App.h  ApplicationAPI.h
Engine/Assets/Shaders/Debug/: ViewModes.hlsli
Engine/Assets/Shaders/Geometry/: Transforms.hlsli
Engine/Assets/Shaders/Material/: Material.hlsli
Engine/Assets/Shaders/Passes/Forward/: ForwardLitPS.hlsl
Engine/Assets/Shaders/Resources/: ConstantBuffers.hlsli
Engine/Audio/: CMakeLists.txt
Engine/Core/Private/: FileSystemUtils.cpp  PCH.h
Engine/Core/Private/Diagnostics/: Log.cpp
Engine/Core/Private/Diagnostics/Logging/: LogBuffer.h  LogFormatting.h  LogSink.cpp  LogSink.h
Engine/Core/Private/Input/: InputState.cpp
Engine/Core/Private/Math/: Frustum.cpp  Transform.cpp
Engine/Core/Private/Time/: Timer.cpp
Engine/Core/Public/: CoreAPI.h  CoreMinimal.h  CoreTypes.h  FileSystemUtils.h
Engine/Core/Public/Diagnostics/: DebugUtils.h  Log.h
Engine/Core/Public/Events/: Event.h  EventHandle.h  ScopedEventHandle.h
Engine/Core/Public/Hash/: HashUtils.h
Engine/Core/Public/Input/: InputState.h
Engine/Core/Public/Input/Device/: InputDevice.h
Engine/Core/Public/Input/Dispatch/: DispatchMode.h  InputLayer.h
Engine/Core/Public/Input/Events/: KeyboardEvent.h  MouseButtonEvent.h  MouseMoveEvent.h  MouseWheelEvent.h
Engine/Core/Public/Input/Keyboard/: Key.h  ModifierFlags.h
Engine/Core/Public/Input/Mouse/: MouseButton.h  MousePosition.h  MouseWheel.h
Engine/Core/Public/Input/State/: ButtonState.h
Engine/Core/Public/Math/: Frustum.h  MathUtils.h  Transform.h
Engine/Core/Public/Strings/: StringUtils.h
Engine/Core/Public/Time/: Timer.h
Engine/Editor/: CMakeLists.txt
Engine/GameFramework/: CMakeLists.txt
Engine/GameFramework/Private/: PCH.h
Engine/GameFramework/Private/Assets/: AssetSystem.cpp  GltfLoader.cpp
Engine/GameFramework/Private/Level/: LevelRegistry.cpp
Engine/GameFramework/Private/Level/Levels/: ABeautifulGameLevel.h  CesiumManLevel.h  DamagedHelmetLevel.h  DiffuseTransmissionPlantLevel.h  EmptyLevel.h  SponzaLevel.h
Engine/GameFramework/Private/Runtime/Level/: LevelManager.cpp
Engine/GameFramework/Private/Scene/: ImportedMesh.cpp  Mesh.cpp  Scene.cpp
Engine/GameFramework/Private/Scene/Camera/: CameraController.cpp  GameCamera.cpp
Engine/GameFramework/Public/: GameFrameworkAPI.h
Engine/GameFramework/Public/Assets/: AssetId.h  AssetSystem.h  AssetTypes.h  GltfLoader.h  MaterialDesc.h
Engine/GameFramework/Public/GameEngine/Camera/: CameraController.h
Engine/GameFramework/Public/Level/: Level.h  LevelDesc.h  LevelRegistry.h
Engine/GameFramework/Public/Paths/: PathRoot.h
Engine/GameFramework/Public/Scene/: ImportedMesh.h  Mesh.h  MeshData.h  MeshFactory.h  Scene.h
Engine/GameFramework/Public/Scene/Camera/: GameCamera.h  (+1 more)
Engine/Networking/: CMakeLists.txt
Engine/Physics/: CMakeLists.txt
Engine/Platform/Private/: PCH.h  Window.cpp
Engine/Platform/Private/Input/: InputSystem.cpp
Engine/Platform/Private/Windows/: Win32InputBackend.cpp  Win32InputBackend.h
Engine/Platform/Public/: PlatformAPI.h  PlatformConfig.h  Window.h
Engine/Platform/Public/Input/: IInputBackend.h  InputSystem.h
Engine/RHI/: CMakeLists.txt
Engine/RHI/Private/: PCH.h
Engine/RHI/Private/D3D12/: D3D12DebugLayer.cpp  D3D12Rhi.cpp  D3D12SwapChain.cpp
Engine/RHI/Public/: RHIAPI.h  RHIConfig.h
Engine/RHI/Public/D3D12/: D3D12DebugLayer.h  D3D12Rhi.h  D3D12SwapChain.h
Engine/Renderer/: CMakeLists.txt
Engine/Renderer/Private/: CommandContext.cpp  DepthConvention.cpp  PCH.h  PipelineStateManager.cpp  PipelineStateManager.h  RenderContext.cpp  Renderer.cpp  RendererWindowObserver.cpp  RendererWindowObserver.h  TextureManager.cpp
Engine/Renderer/Private/Camera/: RenderCamera.cpp
Engine/Renderer/Private/Frame/: FrameContext.cpp  FrameExecutor.cpp  FrameExecutor.h
Engine/Renderer/Private/FrameGraph/: FrameGraph.cpp  FrameGraphDeclaration.cpp
Engine/Renderer/Private/GPU/: GPUMesh.cpp  GPUMeshCache.cpp
Engine/Renderer/Private/Passes/: ForwardOpaquePass.cpp
Engine/Renderer/Private/SceneData/: MaterialCacheManager.cpp  MaterialCacheManager.h  MaterialCacheUtils.cpp  MaterialCacheUtils.h  MaterialData.cpp  RenderSceneSnapshot.h  RenderSceneSnapshotCache.cpp  RenderSceneSnapshotCache.h  RendererMaterialCacheState.h  SceneRenderStateCoordinator.cpp  SceneRenderStateCoordinator.h  SceneViewBuilder.cpp  SceneViewBuilder.h
Engine/Renderer/Private/Textures/: DefaultTextures.cpp  MaterialFallbackTextures.cpp
Engine/Renderer/Public/: CommandContext.h  DepthConvention.h  FrameContext.h  RenderContext.h  Renderer.h  RendererAPI.h  TextureManager.h
Engine/Renderer/Public/Camera/: RenderCamera.h
Engine/Renderer/Public/FrameGraph/: BufferHandle.h  FrameGraph.h  FrameGraphBufferDesc.h  FrameGraphPassFlags.h  FrameGraphTextureDesc.h  PassBuilder.h  PassResourceDeclaration.h  RenderPass.h  ResourceHandle.h  ResourceRegistry.h  ResourceState.h  ResourceUsage.h  TextureHandle.h
Engine/Renderer/Public/GPU/: GPUMesh.h  GPUMeshCache.h
Engine/Renderer/Public/Passes/: ForwardOpaquePass.h
Engine/Renderer/Public/SceneData/: DirectionalLight.h  MaterialData.h  MeshDraw.h  SceneView.h
Engine/Renderer/Public/Textures/: DefaultTextures.h  MaterialFallbackTextures.h
Engine/Scripting/: CMakeLists.txt
Engine/UI/: CMakeLists.txt
Engine/UI/Private/: PCH.h  UI.cpp
Engine/UI/Private/Panels/: RendererPanel.cpp
Engine/UI/Private/Sections/: SceneSection.cpp
Engine/UI/Public/: UI.h  UIAPI.h  UIConfig.h
Engine/UI/Public/Framework/: UIRendererSection.h
Engine/UI/Public/Panels/: RendererPanel.h
Engine/UI/Public/Sections/: SceneSection.h  StatsOverlay.h  TimeControls.h  ViewMode.h
Projects/ABeautifulGame/: CMakeLists.txt
Projects/ABeautifulGame/Assets/: .gitkeep
Projects/ABeautifulGame/Src/: main.cpp
Projects/Showcase/: CMakeLists.txt
Projects/Sponza/: CMakeLists.txt
Projects/Sponza/Src/: main.cpp
(+86 files in other folders)
